[package]
name = "data-view"
version = "5.0.0"
edition = "2018"

description = "This library provides a data view for reading and writing data in a byte array."
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/data-view.rs"
license = "Apache-2.0"
keywords = ["bytes", "endianness", "binary"]

[features]
BE = []
NE = []

[dependencies]
